--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,21 +5,46 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/nav_home"
+            android:title="Home"/>
+    </group>
+
+    <item android:title="Event">
+        <menu>
+            <item
+                android:id="@+id/nav_auto"
+                android:title="Automobile">
+            </item>
+            <item
+                android:id="@+id/nav_comp"
+                android:title="Computer" />
+            <item
+                android:id="@+id/nav_civil"
+                android:title="Civil" />
+            <item
+                android:id="@+id/nav_entc"
+                android:title="EnTc" />
+            <item
+                android:id="@+id/nav_instru"
+                android:title="Instrumental" />
+            <item
+                android:id="@+id/nav_mech"
+                android:title="Mechanical" />
+        </menu>
+    </item>
+
+    <group>
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_co_odinator"
+            android:title="Co-Ordinator">
+        </item>
+    </group>
+
+    <group>
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_gallary"
+            android:title="Gallary">
+        </item>
     </group>
 
     <item android:title="Communicate">
