After merging imran works

--- a/app/src/main/res/layout/activity_gallary.xml
+++ b/app/src/main/res/layout/activity_gallary.xml
@@ -9,7 +9,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/content_civil"
+        layout="@layout/content_gallery"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
