--- a/app/src/main/res/layout/content_computer.xml
+++ b/app/src/main/res/layout/content_computer.xml
@@ -5,29 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".event.computer"
+    tools:context=".eventpackage.computer"
     android:background="@color/black">
 
-
-
-    <include
-        android:id="@+id/include"
-        layout="@layout/toolbar" />
-
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="500dp"
-        android:layout_height="500dp"
-
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="@+id/include"
-        app:layout_constraintTop_toTopOf="parent" />
-
+    <RelativeLayout
+        android:id="@+id/relative_toolbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <include
+            android:id="@+id/include"
+            layout="@layout/toolbar"/>
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
