--- a/app/src/main/res/layout/list_content_main.xml
+++ b/app/src/main/res/layout/list_content_main.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:layout_height="match_parent"
+<android.support.v7.widget.CardView android:id="@+id/cv_main"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
+    app:cardCornerRadius="10dp"
     android:elevation="4dp"
 
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_width="wrap_content"
