CountDown Time Added...Events Activity Created...

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,22 +9,136 @@
     tools:showIn="@layout/app_bar_main"
     android:background="@color/black">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="5dp"
+            android:id="@+id/ivABLogo"
+            android:src="@drawable/splash_image"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+
+            android:layout_below="@+id/toolbar"
+            android:fitsSystemWindows="true"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="10dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/ivABLogo"
+            android:orientation="horizontal"
+            android:weightSum="4">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    app:cardBackgroundColor="@color/day_color"
+                    app:cardCornerRadius="10dp" >
+
+                        <TextView
+                            android:id="@+id/tvDay"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="DD"
+                            android:textStyle="bold"
+                            android:textSize="32sp"
+                            android:textColor="@color/white"/>
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="2dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardBackgroundColor="@color/hrs_color">
+
+                        <TextView
+                            android:id="@+id/tvHrs"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:textColor="@color/white"
+                            android:text="HH"
+                            android:textStyle="bold"
+                            android:textSize="32sp" />
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="2dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardBackgroundColor="@color/min_color">
+
+                        <TextView
+                            android:id="@+id/tvMin"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="MM"
+                            android:textStyle="bold"
+                            android:textSize="32sp"
+                            android:textColor="@color/white" />
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="2dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardBackgroundColor="@color/sec_color">
+
+                        <TextView
+                            android:id="@+id/tvSec"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="SS"
+                            android:textStyle="bold"
+                            android:textSize="32sp"
+                            android:textColor="@color/white" />
+                </android.support.v7.widget.CardView>
+
+        </LinearLayout>
 
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/lvMain"
+            android:layout_below="@id/ivABLogo"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="55dp"
             android:layout_marginBottom="10dp"
             android:dividerHeight="10dp"
             android:divider="@null">
         </ListView>
 
 
-    <!-- //TODO: For imran khan -->>
+
+
+        <!-- //TODO: For imran khan -->>
 
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
