Collapsing Toolbar, Expandable CardView, ViewPager Added

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,26 +8,18 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/app_bar_main"
     android:background="@color/black">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginTop="5dp"
-            android:id="@+id/ivABLogo"
-            android:src="@drawable/splash_image"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-
-            android:layout_below="@+id/toolbar"
-            android:fitsSystemWindows="true"/>
-
+    <LinearLayout
+        android:id="@+id/timer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="1dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="10dp"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/ivABLogo"
             android:orientation="horizontal"
             android:weightSum="4">
 
@@ -40,94 +32,222 @@
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
                     app:cardBackgroundColor="@color/day_color"
-                    app:cardElevation="20in"
-                    app:cardCornerRadius="10dp" >
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="20in">
 
                         <TextView
                             android:id="@+id/tvDay"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:elevation="20dp"
                             android:gravity="center"
                             android:text="DD"
-                            android:textStyle="bold"
-                            android:elevation="20dp"
-                            android:textSize="32sp"
-                            android:textColor="@color/white"/>
-                </android.support.v7.widget.CardView>
-
-                <android.support.v7.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="2dp"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="20in"
-                    app:cardBackgroundColor="@color/hrs_color">
-
-                        <TextView
-                            android:id="@+id/tvHrs"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
+                            android:fontFamily="serif-monospace"
                             android:textColor="@color/white"
-                            android:text="HH"
-                            android:textStyle="bold"
-                            android:elevation="20dp"
-                            android:textSize="32sp" />
+                            android:textSize="32sp"
+                            android:textStyle="bold" />
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_marginBottom="2dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="5dp"
-                    android:layout_marginBottom="2dp"
+                    android:layout_weight="1"
+                    app:cardBackgroundColor="@color/hrs_color"
                     app:cardCornerRadius="10dp"
-                    app:cardElevation="20in"
-                    app:cardBackgroundColor="@color/min_color">
+                    app:cardElevation="20in">
+
+                        <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="fill_parent"
+                            android:orientation="vertical">
+                                <TextView
+                                    android:id="@+id/tvHrs"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="0dp"
+                                    android:elevation="20dp"
+                                    android:gravity="center"
+                                    android:text="HH"
+                                    android:textColor="@color/white"
+                                    android:textSize="32sp"
+                                    android:textStyle="bold"
+                                    android:fontFamily="serif-monospace"
+                                    android:layout_weight="3"/>
+                        </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    app:cardBackgroundColor="@color/min_color"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="20in">
 
                         <TextView
                             android:id="@+id/tvMin"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:elevation="20dp"
                             android:gravity="center"
                             android:text="MM"
-                            android:textStyle="bold"
+                            android:textColor="@color/white"
                             android:textSize="32sp"
-                            android:elevation="20dp"
-                            android:textColor="@color/white" />
+                            android:textStyle="bold"
+                            android:fontFamily="serif-monospace"/>
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_marginBottom="2dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="5dp"
-                    android:layout_marginBottom="2dp"
+                    android:layout_weight="1"
+                    app:cardBackgroundColor="@color/sec_color"
                     app:cardCornerRadius="10dp"
-                    app:cardElevation="20in"
-                    app:cardBackgroundColor="@color/sec_color">
+                    app:cardElevation="20in">
 
                         <TextView
                             android:id="@+id/tvSec"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:elevation="20dp"
                             android:gravity="center"
                             android:text="SS"
-                            android:textStyle="bold"
-                            android:elevation="20dp"
+                            android:textColor="@color/white"
                             android:textSize="32sp"
-                            android:textColor="@color/white" />
+                            android:textStyle="bold"
+                            android:fontFamily="serif-monospace" />
                 </android.support.v7.widget.CardView>
-
         </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:orientation="horizontal"
+                android:weightSum="4">
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="2dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="1"
+                        app:cardBackgroundColor="@color/day_color"
+                        app:cardCornerRadius="12dp"
+                        app:cardElevation="50in">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:elevation="20dp"
+                                android:gravity="center"
+                                android:text="DD"
+                                android:fontFamily="serif-monospace"
+                                android:textColor="@color/white"
+                                android:textStyle="bold" />
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="2dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="1"
+                        app:cardBackgroundColor="@color/hrs_color"
+                        app:cardCornerRadius="12dp"
+                        app:cardElevation="20in">
+
+                            <LinearLayout
+                                android:layout_width="fill_parent"
+                                android:layout_height="fill_parent"
+                                android:orientation="vertical">
+                                    <TextView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="0dp"
+                                        android:elevation="20dp"
+                                        android:gravity="center"
+                                        android:text="HH"
+                                        android:textColor="@color/white"
+                                        android:textStyle="bold"
+                                        android:fontFamily="serif-monospace"
+                                        android:layout_weight="3"/>
+                            </LinearLayout>
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="2dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="1"
+                        app:cardBackgroundColor="@color/min_color"
+                        app:cardCornerRadius="12dp"
+                        app:cardElevation="20in">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:elevation="20dp"
+                                android:gravity="center"
+                                android:text="MM"
+                                android:textColor="@color/white"
+                                android:textStyle="bold"
+                                android:fontFamily="serif-monospace"/>
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="2dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="1"
+                        app:cardCornerRadius="12dp"
+                        app:cardBackgroundColor="@color/sec_color"
+                        app:cardElevation="20in">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:elevation="20dp"
+                                android:gravity="center"
+                                android:text="SS"
+                                android:textColor="@color/white"
+                                android:textStyle="bold"
+                                android:fontFamily="serif-monospace" />
+                    </android.support.v7.widget.CardView>
+            </LinearLayout>
+
+    </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="-15dp"
+            android:id="@+id/ivABLogo"
+            android:src="@drawable/ab"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+
+            android:layout_below="@+id/timer"
+            android:fitsSystemWindows="true"/>
 
         <ListView
             android:layout_width="match_parent"
@@ -136,7 +256,7 @@
             android:layout_below="@id/ivABLogo"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="55dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:dividerHeight="10dp"
             android:divider="@null">
