--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -10,6 +10,6 @@
     <item
         android:id="@+id/action_co_odinator_login"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_co_ordinator"
         app:showAsAction="never" />
 </menu>
