--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -55,14 +55,15 @@
             <item
                 android:id="@+id/nav_principal_desk"
                 android:title="Principal Desk"
-                android:icon="@drawable/ic_phone_contact_us"/>
+                android:icon="@drawable/ic_principal_desk"/>
             <item
                 android:id="@+id/nav_about_gcoeara"
-                android:title="About GCOEARA"/>
+                android:title="About GCOEARA"
+                android:icon="@drawable/ic_about_gcoeara"/>
             <item
                 android:id="@+id/nav_about_us"
                 android:title="About Us"
-                android:icon="@drawable/ic_auto"/>
+                android:icon="@drawable/ic_about_us"/>
         </menu>
     </item>
 
