--- a/app/src/main/res/layout/content_game.xml
+++ b/app/src/main/res/layout/content_game.xml
@@ -21,13 +21,13 @@
 
 
     <ScrollView
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
         android:orientation="vertical">
 
         <ImageView
@@ -43,14 +43,35 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:layout_centerHorizontal="true"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="5dp"
+            android:foreground="?android:attr/selectableItemBackground"
             android:layout_below="@+id/imageGame">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:padding="5dp">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Description"
-                android:padding="5dp"
-                android:textSize="20sp"
+                android:textAlignment="center"
+                android:padding="3dp"
+                android:textStyle="bold"
+                android:textSize="21sp"
                 android:layout_margin="10dp"/>
+                <TextView
+                    android:id="@+id/tvDescriptionGame"
+                    android:layout_width="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textSize="15sp"
+                    android:text="-Description"/>
+            </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
@@ -58,6 +79,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="5dp"
+            android:foreground="?android:attr/selectableItemBackground"
             android:layout_below="@+id/cvDesciption">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -77,16 +101,17 @@
                         android:layout_weight="1"
                         android:layout_gravity="center_vertical"
                         android:text="Rules of Games"
-                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:textSize="21sp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"/>
 
                     <ImageView
-                        android:id="@+id/list_item_genere_arrow"
+                        android:id="@+id/ivArrowRules"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:src="@drawable/down_arrow">
+                        android:src="@drawable/ic_arrow_drop_down">
                     </ImageView>
                 </LinearLayout>
 
@@ -102,6 +127,8 @@
                         android:layout_height="wrap_content"
                         android:text="the Rules are Here"
                         android:visibility="gone"
+                        android:textStyle="italic"
+                        android:textSize="20sp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
                         android:padding="5dp"/>
@@ -117,6 +144,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="5dp"
+            android:foreground="?android:attr/selectableItemBackground"
             android:layout_below="@+id/cvRulesCard">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -135,15 +165,17 @@
                         android:layout_weight="1"
                         android:layout_gravity="center_vertical"
                         android:text="Prizes"
-                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:textSize="21sp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"/>
 
                     <ImageView
+                        android:id="@+id/ivArrowPrizes"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:src="@drawable/down_arrow">
+                        android:src="@drawable/ic_arrow_drop_down">
                     </ImageView>
                 </LinearLayout>
 
@@ -158,6 +190,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="T"
+                        android:textStyle="italic"
+                        android:textSize="20sp"
                         android:visibility="gone"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
@@ -173,6 +207,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            app:cardCornerRadius="10dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardElevation="5dp"
             android:layout_below="@+id/cvPrizeCard">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -192,15 +229,17 @@
                         android:layout_weight="1"
                         android:layout_gravity="center_vertical"
                         android:text="Co-Ordinator"
-                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:textSize="21sp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"/>
 
                     <ImageView
+                        android:id="@+id/ivArrowCordinator"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:src="@drawable/down_arrow">
+                        android:src="@drawable/ic_arrow_drop_down">
                     </ImageView>
                 </LinearLayout>
 
@@ -215,6 +254,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="T"
+                        android:textSize="20sp"
+                        android:textStyle="italic"
                         android:visibility="gone"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
